# spotify-utils

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: build.yml  main.yml  release.yml  spotify-utils.yml
spotify_utils/: config.py  constants.py  main.py  settings.toml
spotify_utils/src/: auth.py  enums.py  file_engine.py  file_operations.py  playlists.py  template_engine.py
spotify_utils/src/tui/: app.py  tui.tcss
spotify_utils/templates/: playlist_export.html  playlists.html
tests/: test_playlists.py
