[tool.poetry]
name = "spotify-utils"
version = "0.5.2"
description = "spotify-utils is yet another spotify client, but for specific utility tasks"
license = "MIT"
authors = ["Fabian Eulitz <dev@sustineo.de>"]
documentation = ""
repository = "https://github.com/fabieu/spotify-utils"
keywords = ["spotify", "utility"]
readme = "README.md"

[tool.poetry.scripts]
spotify-utils = "spotify_utils.main:app"

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.19.0"
typer = "^0.4.1"
tabulate = "^0.8.9"
Jinja2 = "^3.1.2"
dynaconf = "^3.1.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
