[tool.poetry]
name = "spotify-utils"
version = "1.0.13"
description = "An awesome and easy-to-use CLI for various Spotify® utility tasks"
license = "Apache-2.0"
authors = ["Fabian Eulitz <dev@sustineo.de>"]
repository = "https://github.com/fabieu/spotify-utils"
keywords = ["spotify", "CLI", "utilities"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.9"
spotipy = "~=2.25"
typer = "~=0.15"
tabulate = "~=0.9"
Jinja2 = "~=3.1"
dynaconf = "~=3.2"
setuptools = "~=75.8"

[tool.poetry.group.dev.dependencies]
autopep8 = "~=2.3"
pytest = "~=8.3"
vermin = "~=1.6"

[tool.poetry.scripts]
spotify-utils = "spotify_utils.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
